# e-commercemini

./: .env.example  README.md  docker-compose.yml  vercel.json
backend/: pyproject.toml
backend/app/: crud.py  db.py  deps.py  main.py  models.py  schemas.py  seed.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  api.ts  hooks.ts  main.tsx  store.ts  types.ts
frontend/src/components/: Filters.tsx  Pagination.tsx  ProductCard.tsx  QuantityInput.tsx
frontend/src/pages/: AddProductPage.tsx  CheckoutPage.tsx  OrderDetailPage.tsx  OrdersPage.tsx  ProductsPage.tsx
